chore(i18n): update translations (#1369)

--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Forfalder: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Vis mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Vis {additionalAssigneeCount} flere
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Vis #+ flere}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Godkend
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Der opstod en fejl ved lagring af be
 be.folderState = Der er ingen elementer i denne mappe.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Hent oplysninger om version
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = I
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Emner
 be.keywordsAppliedList = Søgeord blev anvendt
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Søgeord: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Vent, mens elementerne indlæses...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Eksempelvisning
 # Error message when Preview fails due to the files call.
 be.previewError = Vi beklager! Eksempelvisningen kunne ikke indlæses. Opdater siden.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Din adgang er begrænset på grund af den klassificering, der anvendes på dette indhold.
 # Message when new preview is available.
 be.previewUpdate = En ny version af denne fil er tilgængelig.
 # Previous file button title
