--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Määräpäivä: {date
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Näytä vähemmän
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Näytä {additionalAssigneeCount} enemmän
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Näytä #+ enemmän} other {Näytä #+ enemmän}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Hyväksy
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Tuntematon virhe kuvauksen tallennuk
 be.folderState = Kansiossa ei ole yhtään kohdetta.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Hae versiotiedot
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = Kansiossa
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Aiheet
 be.keywordsAppliedList = Hakusanoja käytettiin
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Hakusanat: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Odota hetki. Kohteita ladataan...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Esikatsele
 # Error message when Preview fails due to the files call.
 be.previewError = Esikatselua ei voitu ladata. Päivitä sivu.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Käyttöoikeutta on rajoitettu tämän sisällön luokittelun vuoksi.
 # Message when new preview is available.
 be.previewUpdate = Tiedoston uusi versio on saatavana!
 # Previous file button title
