--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -105,7 +105,7 @@ be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Crea
 # label for edit button in create task modal in edit mode
 be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Aggiorna
 # Title for checkmark icon indicating someone completed a task
-be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Completati
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Completata
 # Error message when we failed to load the collaborators when user tries to edit a task
 be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Si è verificato un errore durante il caricamento dei collaboratori per questa attività. Riprova.
 # Label and date for task due date
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Scadenza: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Mostra meno
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Mostra altri {additionalAssigneeCount}
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Mostra # in più} other {Mostra # in più}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Approva
 # Label for an approved task
@@ -125,7 +125,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Assegnatari
 # Completion option for a general task
 be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Contrassegna come completata
 # Label for a completed task
-be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Completati
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Completata
 # Comment headline for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} ha assegnato un'attività di approvazione
 # Comment headline for an approval task assigned to the current user
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Si è verificato un errore durante i
 be.folderState = Non sono presenti elementi nella cartella.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Ottieni informazioni sulla versione
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = In
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Argomenti
 be.keywordsAppliedList = Le parole chiave sono state applicate
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Parole chiave: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Caricamento degli elementi in corso. Attendi...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Anteprima
 # Error message when Preview fails due to the files call.
 be.previewError = Caricamento dell'anteprima non riuscito. Aggiorna la pagina.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = L'accesso è limitato a causa della classificazione applicata a questo contenuto.
 # Message when new preview is available.
 be.previewUpdate = È disponibile una nuova versione del file.
 # Previous file button title
