--- a/i18n/ja-JP.properties
+++ b/i18n/ja-JP.properties
@@ -105,7 +105,7 @@ be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = 作成
 # label for edit button in create task modal in edit mode
 be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = 更新
 # Title for checkmark icon indicating someone completed a task
-be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = 完了しました。
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = 完了済み
 # Error message when we failed to load the collaborators when user tries to edit a task
 be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = このタスクのコラボレータの読み込み中にエラーが発生しました。もう一度やり直してください。
 # Label and date for task due date
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = 期限: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = 表示を減らす
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = 次の{additionalAssigneeCount}人を表示
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {さらに#人以上を表示} other {さらに#人以上を表示}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = 承認
 # Label for an approved task
@@ -125,7 +125,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = タスク担
 # Completion option for a general task
 be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = 完了としてマーク
 # Label for a completed task
-be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = 完了しました。
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = 完了済み
 # Comment headline for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user}が承認タスクを割り当てました
 # Comment headline for an approval task assigned to the current user
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = 説明の保存中にエラーが発
 be.folderState = このフォルダには項目が含まれていません。
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = バージョン情報を取得
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = 検索するフォルダ:
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = トピック
 be.keywordsAppliedList = キーワードを適用しました
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = キーワード: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = 項目がロードされるまでお待ちください...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = プレビュー
 # Error message when Preview fails due to the files call.
 be.previewError = プレビューを読み込めませんでした。ページを更新してください。
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = このコンテンツに適用されている分類により、アクセスが制限されています。
 # Message when new preview is available.
 be.previewUpdate = このファイルの新しいバージョンを使用できます。
 # Previous file button title
