--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -79,7 +79,7 @@ be.contentSidebar.activityFeed.comment.taskDeletePrompt = Weet u zeker dat u dez
 # Text to show on menu item to edit task
 be.contentSidebar.activityFeed.comment.taskEditMenuItem = Taak wijzigen
 # Title for x icon indicating someone rejected a task
-be.contentSidebar.activityFeed.task.rejectedAssignment = Geweigerd
+be.contentSidebar.activityFeed.task.rejectedAssignment = Afgewezen
 # Approve option for a task
 be.contentSidebar.activityFeed.task.taskApprove = Voltooien
 # Due date for a task
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Deadline: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Minder weergeven
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = {additionalAssigneeCount} meer weergeven
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {#+ meer weergeven} other {#+ meer weergeven}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Goedkeuren
 # Label for an approved task
@@ -141,7 +141,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Alle toegew
 # Reject option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Afwijzen
 # Label for a rejected task
-be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Geweigerd
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Afgewezen
 # Approved task status, where dateTime is a readable time like "Today at 2pm"
 be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Goedgekeurd {dateTime}
 # Completed task status, where dateTime is a readable time like "Today at 2pm"
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Er is iets fout gegaan bij het opsla
 be.folderState = Deze map bevat geen items.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Versie-informatie ophalen
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = In
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Onderwerpen
 be.keywordsAppliedList = Er zijn trefwoorden toegepast
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Trefwoorden: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = De items worden geladen. Een ogenblik geduld.
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Voorbeeld bekijken
 # Error message when Preview fails due to the files call.
 be.previewError = Het voorbeeld kan niet worden geladen. Vernieuw de pagina.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Uw toegang is beperkt vanwege de classificatie die op deze content is toegepast.
 # Message when new preview is available.
 be.previewUpdate = Er is een nieuwe versie van dit bestand beschikbaar.
 # Previous file button title
