--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -79,7 +79,7 @@ be.contentSidebar.activityFeed.comment.taskDeletePrompt = Czy na pewno chcesz tr
 # Text to show on menu item to edit task
 be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modyfikuj zadanie
 # Title for x icon indicating someone rejected a task
-be.contentSidebar.activityFeed.task.rejectedAssignment = Odrzucono
+be.contentSidebar.activityFeed.task.rejectedAssignment = Odrzucone
 # Approve option for a task
 be.contentSidebar.activityFeed.task.taskApprove = Gotowe
 # Due date for a task
@@ -105,7 +105,7 @@ be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Utwórz
 # label for edit button in create task modal in edit mode
 be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Zaktualizuj
 # Title for checkmark icon indicating someone completed a task
-be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Zakończono
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Ukończone
 # Error message when we failed to load the collaborators when user tries to edit a task
 be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Podczas wczytywania współpracowników wystąpił błąd. Spróbuj ponownie.
 # Label and date for task due date
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Termin: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Pokaż mniej
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Pokaż {additionalAssigneeCount} więcej
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Pokaż #+ więcej} other {Pokaż #+ więcej}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Zatwierdź
 # Label for an approved task
@@ -125,7 +125,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Osoby przypi
 # Completion option for a general task
 be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Oznacz jako zakończone
 # Label for a completed task
-be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Zakończono
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Ukończone
 # Comment headline for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = Użytkownik {user} przypisał zadanie zatwierdzenia
 # Comment headline for an approval task assigned to the current user
@@ -141,7 +141,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Wyświetl w
 # Reject option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Odrzuć
 # Label for a rejected task
-be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Odrzucono
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Odrzucone
 # Approved task status, where dateTime is a readable time like "Today at 2pm"
 be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Zatwierdzone {dateTime}
 # Completed task status, where dateTime is a readable time like "Today at 2pm"
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Podczas zapisywania opisu wystąpił
 be.folderState = Brak elementów w folderze.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Uzyskaj informacje o wersji
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = W
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Tematy
 be.keywordsAppliedList = Zastosowano słowa kluczowe
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Słowa kluczowe: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Zaczekaj, aż elementy zostaną wczytane...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Wyświetl podgląd
 # Error message when Preview fails due to the files call.
 be.previewError = Przepraszamy, nie można wczytać podglądu. Odśwież stronę.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Twój dostęp jest ograniczony ze względu na klasyfikację zastosowaną do tej zawartości.
 # Message when new preview is available.
 be.previewUpdate = Dostępna jest nowa wersja tego pliku.
 # Previous file button title
