--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -53,7 +53,7 @@ be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Ao a
 # Title for assignees input
 be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Responsáveis
 # Title for approvers due date input
-be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Data de vencimento
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Prazo
 # Placeholder for due date input
 be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Selecione uma data
 # Mentioning call to action displayed below the comment input
@@ -95,7 +95,7 @@ be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Ocorreu um erro
 # label for cancel button in create task popup
 be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Cancelar
 # label for task create form due date input
-be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Data de vencimento
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Prazo
 # label for task create form message input
 be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Mensagem
 # label for task create form assignee input
@@ -105,7 +105,7 @@ be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Criar
 # label for edit button in create task modal in edit mode
 be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Atualizar
 # Title for checkmark icon indicating someone completed a task
-be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Concluído
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Concluída
 # Error message when we failed to load the collaborators when user tries to edit a task
 be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Ocorreu um erro ao carregar colaboradores para esta tarefa. Tente novamente.
 # Label and date for task due date
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Vencimento: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Mostrar menos
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Mostrar {additionalAssigneeCount} mais
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Mostrar #+ mais} other {Mostrar #+ mais}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Aprovar
 # Label for an approved task
@@ -125,7 +125,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Responsávei
 # Completion option for a general task
 be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Marcar como concluída
 # Label for a completed task
-be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Concluído
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Concluída
 # Comment headline for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} atribuiu uma Tarefa de aprovação
 # Comment headline for an approval task assigned to the current user
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Algo deu errado ao salvar a descriç
 be.folderState = Não há itens nesta pasta.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Obter informações de versão
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = Dentro
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Tópicos
 be.keywordsAppliedList = Palavras-chave foram aplicadas
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Palavras-chave: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Aguarde enquanto os itens são carregados...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Visualizar
 # Error message when Preview fails due to the files call.
 be.previewError = A visualização não foi carregada. Atualize a página.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Seu acesso é restrito devido à classificação aplicada a este conteúdo.
 # Message when new preview is available.
 be.previewUpdate = Uma nova versão deste arquivo está disponível.
 # Previous file button title
