--- a/i18n/sv-SE.properties
+++ b/i18n/sv-SE.properties
@@ -51,7 +51,7 @@ be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Lägg till 
 # Tooltip text for checkbox to add approvers to a comment
 be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = När någon tilldelas en uppgift skickas ett meddelande med text i kommentarrutan som personen kan godkänna eller neka.
 # Title for assignees input
-be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Delegerade
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Tilldelade
 # Title for approvers due date input
 be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Förfallodatum
 # Placeholder for due date input
@@ -105,7 +105,7 @@ be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Skapa
 # label for edit button in create task modal in edit mode
 be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Uppdatera
 # Title for checkmark icon indicating someone completed a task
-be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Klar
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Klart
 # Error message when we failed to load the collaborators when user tries to edit a task
 be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Ett fel uppstod när medarbetare lästes in för den här uppgiften. Försök igen.
 # Label and date for task due date
@@ -113,19 +113,19 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Förfaller: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Visa mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Visa {additionalAssigneeCount} mer
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Visa mer än # till} other {Visa mer än # till}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Godkänn
 # Label for an approved task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedLabel = Godkänt
 # Title for list of all task assignees
-be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Delegerade
+be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Tilldelade
 # Completion option for a general task
 be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Markera som slutförd
 # Label for a completed task
-be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Klar
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Klart
 # Comment headline for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} tilldelade en godkännandeuppgift
 # Comment headline for an approval task assigned to the current user
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Något gick fel när beskrivningen s
 be.folderState = Det finns inga objekt i den här mappen.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Visa versionsinformation
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = I
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Ämnen
 be.keywordsAppliedList = Nyckelord har tillämpats
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Nyckelord: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Vänta medan objekten laddas ...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Förhandsgranska
 # Error message when Preview fails due to the files call.
 be.previewError = Det gick inte att läsa in förhandsgranskningen. Uppdatera sidan.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Din åtkomst är begränsad på grund av den klassificering som har använts på det här innehållet.
 # Message when new preview is available.
 be.previewUpdate = En nyare version av filen är tillgänglig.
 # Previous file button title
