--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -47,7 +47,7 @@ be.collapse = Daralt
 # Placeholder for approvers input
 be.contentSidebar.activityFeed.approvalCommentForm.approvalAddAssignee = Atanan ekleyin
 # Label for checkbox to add approvers to a comment
-be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Görev ekleyin
+be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTask = Görev Ekle
 # Tooltip text for checkbox to add approvers to a comment
 be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Bir kişiye görev atandığında, kişiye yorum kutusundaki mesaj şeklinde bir bildirim iletilir; kişi görevi onaylayabilir ya da reddedebilir.
 # Title for assignees input
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Son tarih: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Daha Az Göster
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = {additionalAssigneeCount} Adet Daha Göster
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {#+ Adet Daha Göster} other {#+ Adet Daha Göster}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Onayla
 # Label for an approved task
@@ -151,7 +151,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel = Durum: {taskStatus
 # Rejected task status, where dateTime is a readable time like "Today at 2pm"
 be.contentSidebar.activityFeed.taskNew.tasksFeedStatusRejected = Reddedildi: {dateTime}
 # label for button that opens task popup
-be.contentSidebar.addTask = Görev ekleyin
+be.contentSidebar.addTask = Görev Ekle
 # label for menu item that opens approval task popup
 be.contentSidebar.addTask.approval = Onay Görevi
 # description for menu item that opens approval task popup
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Açıklama kaydedilirken bir hata ol
 be.folderState = Bu klasörde öğe yok.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Sürüm bilgisini al
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = Konum:
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Konular
 be.keywordsAppliedList = Anahtar kelimeler uygulandı
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Anahtar kelimeler: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Öğeler yüklenirken lütfen bekleyin...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Ön Görüntüle
 # Error message when Preview fails due to the files call.
 be.previewError = Üzgünüz, ön görüntüleme yüklenmedi. Lütfen sayfayı yenileyin.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Bu içeriğe uygulanan sınıflandırma nedeniyle erişiminiz kısıtlandı.
 # Message when new preview is available.
 be.previewUpdate = Bu dosyanın yeni bir sürümü mevcut.
 # Previous file button title
