--- a/i18n/zh-TW.properties
+++ b/i18n/zh-TW.properties
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = 到期日：{date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = 顯示較少
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = 顯示其他 {additionalAssigneeCount} 人
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {顯示其他 #+ 人} other {顯示其他 #+ 人}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = 核准
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = 儲存說明時發生錯誤。
 be.folderState = 此資料夾中沒有任何項目。
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = 取得版本資訊
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = 於
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = 主題
 be.keywordsAppliedList = 已套用關鍵字
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = 關鍵字：{words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = 正在載入項目，請稍候...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = 預覽
 # Error message when Preview fails due to the files call.
 be.previewError = 很抱歉，無法載入預覽。請重新整理頁面。
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = 您的存取權限因此內容套用的分類而受到限制。
 # Message when new preview is available.
 be.previewUpdate = 此檔案有新版可用。
 # Previous file button title
