--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Fällig am: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Weniger anzeigen
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = {additionalAssigneeCount} weitere anzeigen
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {#+ weitere anzeigen} other {#+ weitere anzeigen}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Genehmigen
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Beim Speichern der Beschreibung ist 
 be.folderState = In diesem Ordner sind keine Elemente enthalten.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Versionsinformationen abrufen
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = In
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Themen
 be.keywordsAppliedList = Schlüsselwörter wurden angewendet
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Schlüsselwörter: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Warten Sie, während die Elemente geladen werden ...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Vorschau
 # Error message when Preview fails due to the files call.
 be.previewError = Die Vorschau konnte leider nicht geladen werden. Bitte aktualisieren Sie die Seite.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Ihr Zugriff ist aufgrund der auf diesen Inhalt angewendeten Klassifizierung eingeschränkt.
 # Message when new preview is available.
 be.previewUpdate = Eine neue Version dieser Datei ist verfügbar.
 # Previous file button title
