--- a/i18n/es-ES.properties
+++ b/i18n/es-ES.properties
@@ -59,7 +59,7 @@ be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Seleccio
 # Mentioning call to action displayed below the comment input
 be.contentSidebar.activityFeed.approvalCommentForm.atMentionTip = @mencione a usuarios para que reciban una notificación.
 # Text for cancel button
-be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Cancelar
+be.contentSidebar.activityFeed.approvalCommentForm.commentCancel = Anular
 # Text for post button
 be.contentSidebar.activityFeed.approvalCommentForm.commentPost = Publicar
 # Placeholder for comment input
@@ -67,7 +67,7 @@ be.contentSidebar.activityFeed.approvalCommentForm.commentWrite = Escribir un co
 # Confirmation prompt text to delete comment
 be.contentSidebar.activityFeed.comment.commentDeletePrompt = ¿Eliminar comentario?
 # Comment posted full date time for title
-be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = {time, date, full} a las {time, time, short}
+be.contentSidebar.activityFeed.comment.commentPostedFullDateTime = El {time, date, full} a las {time, time, short}
 # Show original button for showing original comment
 be.contentSidebar.activityFeed.comment.commentShowOriginal = Mostrar original
 # Translate button for translating comment
@@ -93,7 +93,7 @@ be.contentSidebar.activityFeed.taskForm.taskCreateErrorTitle = Error
 # Error message when a task edit fails
 be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Se ha producido un error al modificar esta tarea. Inténtelo de nuevo.
 # label for cancel button in create task popup
-be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Cancelar
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Anular
 # label for task create form due date input
 be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Fecha de vencimiento
 # label for task create form message input
@@ -105,7 +105,7 @@ be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Crear
 # label for edit button in create task modal in edit mode
 be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Actualizar
 # Title for checkmark icon indicating someone completed a task
-be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Completadas
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Completada
 # Error message when we failed to load the collaborators when user tries to edit a task
 be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Se ha producido un error al cargar los colaboradores para esta tarea. Inténtelo de nuevo.
 # Label and date for task due date
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Vencimiento: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Mostrar menos
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Mostrar {additionalAssigneeCount} más
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Mostrar +# más} other {Mostrar +# más}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Aprobar
 # Label for an approved task
@@ -125,7 +125,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Destinatario
 # Completion option for a general task
 be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Marcar como completada
 # Label for a completed task
-be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Completadas
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Completada
 # Comment headline for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} ha asignado una tarea de aprobación
 # Comment headline for an approval task assigned to the current user
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Se ha producido un error al guardar 
 be.folderState = No hay elementos en esta carpeta.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Obtener información de versión
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = en
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Temas
 be.keywordsAppliedList = Las palabras clave se han aplicado.
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Palabras clave: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Espere mientras se cargan los elementos...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Previsualizar
 # Error message when Preview fails due to the files call.
 be.previewError = Lo sentimos, la previsualización no se ha cargado. Actualice la página.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Dispone de un acceso restringido debido a la clasificación aplicada a este contenido.
 # Message when new preview is available.
 be.previewUpdate = Hay disponible una nueva versión de este archivo.
 # Previous file button title
