--- a/i18n/fr-CA.properties
+++ b/i18n/fr-CA.properties
@@ -79,7 +79,7 @@ be.contentSidebar.activityFeed.comment.taskDeletePrompt = Voulez-vous vraiment s
 # Text to show on menu item to edit task
 be.contentSidebar.activityFeed.comment.taskEditMenuItem = Modifier la tâche
 # Title for x icon indicating someone rejected a task
-be.contentSidebar.activityFeed.task.rejectedAssignment = Rejeté
+be.contentSidebar.activityFeed.task.rejectedAssignment = Rejetée
 # Approve option for a task
 be.contentSidebar.activityFeed.task.taskApprove = Terminé
 # Due date for a task
@@ -105,7 +105,7 @@ be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormSubmitLabel = Créer
 # label for edit button in create task modal in edit mode
 be.contentSidebar.activityFeed.taskForm.tasksEditTaskFormSubmitLabel = Mettre à jour
 # Title for checkmark icon indicating someone completed a task
-be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Terminé
+be.contentSidebar.activityFeed.taskNew.taskAssignmentCompleted = Terminée
 # Error message when we failed to load the collaborators when user tries to edit a task
 be.contentSidebar.activityFeed.taskNew.taskCollaboratorLoadErrorMessage = Une erreur s'est produite lors du chargement des collaborateurs pour cette tâche. Veuillez réessayer.
 # Label and date for task due date
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Échéance : {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Afficher moins
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Afficher {additionalAssigneeCount} de plus
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Afficher + de # en plus} other { Afficher + de # en plus}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Approuver
 # Label for an approved task
@@ -125,7 +125,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedAssigneeListTitle = Destinataire
 # Completion option for a general task
 be.contentSidebar.activityFeed.taskNew.tasksFeedCompleteAction = Marquer comme terminée
 # Label for a completed task
-be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Terminé
+be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedLabel = Terminée
 # Comment headline for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedHeadlineApproval = {user} a attribué une tâche d'approbation
 # Comment headline for an approval task assigned to the current user
@@ -141,7 +141,7 @@ be.contentSidebar.activityFeed.taskNew.tasksFeedMoreAssigneesLabel = Afficher to
 # Reject option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedRejectAction = Refuser
 # Label for a rejected task
-be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Rejeté
+be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedLabel = Rejetée
 # Approved task status, where dateTime is a readable time like "Today at 2pm"
 be.contentSidebar.activityFeed.taskNew.tasksFeedStatusApproved = Approuvée {dateTime}
 # Completed task status, where dateTime is a readable time like "Today at 2pm"
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Une erreur s'est produite lors de l'
 be.folderState = Ce dossier est vide.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Obtenir les informations de version
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = Dans
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Sujets
 be.keywordsAppliedList = Les mots-clés ont été appliqués
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Mots-clés : {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Veuillez patienter pendant le chargement de l'élément...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Prévisualiser
 # Error message when Preview fails due to the files call.
 be.previewError = Nous sommes désolés, nous n'avons pas pu charger la prévisualisation. Veuillez actualiser la page.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Votre accès est limité en raison du classement appliqué à ce contenu.
 # Message when new preview is available.
 be.previewUpdate = Une nouvelle version de ce fichier est disponible.
 # Previous file button title
