--- a/i18n/ko-KR.properties
+++ b/i18n/ko-KR.properties
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = 기한: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = 간단히 표시
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = {additionalAssigneeCount}명 더 표시
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {#명 이상 더 표시} other {#명 이상 더 표시}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = 승인
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = 설명을 저장하는 중에 문제
 be.folderState = 이 폴더에 항목이 없습니다.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = 버전 정보 가져오기
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = 위치
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = 주제
 be.keywordsAppliedList = 키워드가 적용되었습니다.
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = 키워드: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = 항목이 로드되는 동안 잠시 기다려 주십시오...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = 미리 보기
 # Error message when Preview fails due to the files call.
 be.previewError = 죄송합니다. 미리 보기가 로드되지 않았습니다. 페이지를 새로 고치십시오.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = 이 콘텐츠에 적용된 분류로 인해 사용자의 액세스가 제한됩니다
 # Message when new preview is available.
 be.previewUpdate = 이 파일의 새로운 버전을 사용할 수 있습니다.
 # Previous file button title
