--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Forfaller: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Vis mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Vis {additionalAssigneeCount} mer
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Vis #+ til} other {Vis #+ til}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Godkjenn
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Kan ikke lagre beskrivelsen.
 be.folderState = Det finnes ingen elementer i denne mappen.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Hent versjonsinformasjon
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = I
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Emner
 be.keywordsAppliedList = Nøkkelord ble brukt
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Nøkkelord: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Vent mens elementene lastes inn ...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Forhåndsvis
 # Error message when Preview fails due to the files call.
 be.previewError = Kan ikke laste inn forhåndsvisningen. Last inn siden på nytt.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Tilgangen din er begrenset på grunn av hvordan dette innholdet er klassifisert.
 # Message when new preview is available.
 be.previewUpdate = En ny versjon av denne filen er tilgjengelig.
 # Previous file button title
