--- a/i18n/ru-RU.properties
+++ b/i18n/ru-RU.properties
@@ -53,7 +53,7 @@ be.contentSidebar.activityFeed.approvalCommentForm.approvalAddTaskTooltip = Пр
 # Title for assignees input
 be.contentSidebar.activityFeed.approvalCommentForm.approvalAssignees = Исполнители
 # Title for approvers due date input
-be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Дата истечения срока
+be.contentSidebar.activityFeed.approvalCommentForm.approvalDueDate = Срок
 # Placeholder for due date input
 be.contentSidebar.activityFeed.approvalCommentForm.approvalSelectDate = Выберите дату
 # Mentioning call to action displayed below the comment input
@@ -95,7 +95,7 @@ be.contentSidebar.activityFeed.taskForm.taskUpdateErrorMessage = Ошибка п
 # label for cancel button in create task popup
 be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormCancelLabel = Отмена
 # label for task create form due date input
-be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Дата истечения срока
+be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormDueDateLabel = Срок
 # label for task create form message input
 be.contentSidebar.activityFeed.taskForm.tasksAddTaskFormMessageLabel = Сообщение
 # label for task create form assignee input
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = Срок: {date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = Скрыть
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Показать еще {additionalAssigneeCount}
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Показать еще #+} other {Показать еще #+}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = Утвердить
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = Ошибка при сохранен
 be.folderState = В папке нет элементов.
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = Информация о версиях
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = в
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = Темы
 be.keywordsAppliedList = Ключевые слова применены
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = Ключевые слова: {words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = Выполняется загрузка элементов...
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = Предпросмотр
 # Error message when Preview fails due to the files call.
 be.previewError = Не удалось загрузить предпросмотр. Обновите страницу.
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = Доступ ограничен, так как к этому контенту применена классификация.
 # Message when new preview is available.
 be.previewUpdate = Доступна новая версия этого файла.
 # Previous file button title
