--- a/i18n/zh-CN.properties
+++ b/i18n/zh-CN.properties
@@ -113,9 +113,9 @@ be.contentSidebar.activityFeed.taskNew.taskDueDateLabel = 到期日期：{date}
 # Button name to hide task assignee list
 be.contentSidebar.activityFeed.taskNew.taskShowLessAssignees = 显示较少
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssignees = 显示其他 {additionalAssigneeCount} 个
 # Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
-be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
+be.contentSidebar.activityFeed.taskNew.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {显示其他 #+ 个} other {显示其他 #+ 个}}
 # Approve option for an approval task
 be.contentSidebar.activityFeed.taskNew.tasksFeedApproveAction = 批准
 # Label for an approved task
@@ -252,6 +252,8 @@ be.fileDescriptionInlineErrorTitleMessage = 保存描述时出现错误。
 be.folderState = 此文件夹中无项目。
 # Aria label for button to get information about a file’s versions
 be.getVersionInfo = 获取版本信息
+# Label for switching to grid view
+be.gridView = Switch to Grid View
 # Label for in action.
 be.in = 位置：
 # Button text to cancel inline item deletion
@@ -280,6 +282,8 @@ be.keywordSkill = 主题
 be.keywordsAppliedList = 已应用关键字
 # Label for a list of keywords. {words} are the list of keywords.
 be.keywordsList = 关键字：{words}
+# Label for switching to list view
+be.listView = Switch to List View
 # Message shown when folder items are still fetching.
 be.loadingState = 项目正在加载，请稍候…
 # Placeholder for a logo.
@@ -321,7 +325,7 @@ be.preview = 预览
 # Error message when Preview fails due to the files call.
 be.previewError = 抱歉，预览未加载。请刷新页面。
 # Error message when Preview fails due to the files call which is blocked by an access policy.
-be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
+be.previewErrorBlockedByPolicy = 您的访问权限因应用于此内容的分类而受到限制。
 # Message when new preview is available.
 be.previewUpdate = 此文件有新版本。
 # Previous file button title
