fix(classification): Classification badge UX tweaks (#1378)
* feat(classification): Classification badge UX tweaks

* fix: Capitalized classify message

* fix: Fixed snapshot

* chore: Updated properties file

* chore: Removed tag icon from classification

--- a/i18n/en-US.properties
+++ b/i18n/en-US.properties
@@ -581,7 +581,7 @@ boxui.checkboxTooltip.iconInfoText = Info
 # Button to add classification on an item
 boxui.classification.add = Add
 # Button to add classification on an item
-boxui.classification.addClassification = Add Classification
+boxui.classification.addClassification = CLASSIFY
 # Header for classification section in sidebar
 boxui.classification.classification = Classification
 # Button to edit classification on an item
